# AdventOfCode2022

./: CMakeLists.txt  README.md  main.cpp
StringAlgorithms/: StringAlgorithms.cpp  StringAlgorithms.hpp
day1/: Solution.cpp  Solution.hpp  sollution.cpp  sollution.hpp
day10/: Solution.cpp  Solution.hpp
day11/: Solution.cpp  Solution.hpp
day12/: Solution.cpp  Solution.hpp
day13/: Solution.cpp
day14/: Solution.cpp
day15/: Solution.cpp  Solution.hpp
day16/: Solution.cpp
day17/: Solution.cpp  Solution.hpp
day18/: Solution.cpp  Solution.hpp
day19/: Solution.cpp
day2/: Solution.cpp  Solution.hpp  sollution.cpp  sollution.hpp
day20/: Solution.cpp  Solution.hpp
day21/: Solution.cpp  Solution.hpp
day22/: Solution.cpp  Solution.hpp
day23/: Solution.cpp  Solution.hpp
day24/: Solution.cpp  Solution.hpp
day25/: Solution.cpp  Solution.hpp
day3/: Solution.cpp  Solution.hpp
day4/: Solution.cpp  Solution.hpp
day5/: Solution.cpp  Solution.hpp
day6/: Solution.cpp  Solution.hpp  input.txt
day7/: Solution.cpp  Solution.hpp
day8/: Solution.cpp  Solution.hpp
day9/: Solution.cpp  Solution.hpp
parsers/: parsers.cpp  parsers.hpp
utility/: Martix.hpp  Point.cpp  Point.hpp  PointRowCol.cpp  PointRowCol.hpp  PointRowColOrientation.cpp  PointRowColOrientation.hpp  PointXY.cpp  PointXY.hpp  PointXYZ.cpp  PointXYZ.hpp  RaiiTimer.hpp  RangesUtils.hpp  SollutionExecucor.hpp
year2022/: execute.cpp  execute.hpp
year2022/day1/: Solution.cpp  Solution.hpp
year2022/day10/: Solution.cpp
year2022/day11/: Solution.cpp
year2022/day12/: Solution.cpp  Solution.hpp
year2022/day13/: Solution.cpp  Solution.hpp
year2022/day14/: Solution.cpp  Solution.hpp
year2022/day15/: Solution.cpp  Solution.hpp
year2022/day16/: Solution.cpp  Solution.hpp
year2022/day17/: Solution.cpp  Solution.hpp
year2022/day18/: Solution.cpp
year2022/day19/: Solution.cpp  Solution.hpp
year2022/day2/: Solution.cpp  Solution.hpp
year2022/day20/: Solution.cpp
year2022/day21/: Solution.cpp  Solution.hpp
year2022/day22/: Solution.cpp
year2022/day23/: Solution.cpp
year2022/day24/: Solution.cpp  Solution.hpp
year2022/day25/: Solution.cpp
year2022/day3/: Solution.cpp  Solution.hpp
year2022/day4/: Solution.cpp  Solution.hpp
year2022/day5/: Solution.cpp
year2022/day6/: Solution.cpp  Solution.hpp
year2022/day7/: Solution.cpp
year2022/day8/: Solution.cpp  Solution.hpp
year2022/day9/: Solution.cpp
year2023/: execute.cpp  execute.hpp
year2023/day1/: Solution.cpp  Solution.hpp
year2023/day10/: Solution.cpp  Solution.hpp
year2023/day11/: Solution.cpp  Solution.hpp
year2023/day12/: Solution.cpp  Solution.hpp
year2023/day13/: Solution.cpp  Solution.hpp
year2023/day14/: Solution.cpp  Solution.hpp
year2023/day15/: Solution.cpp  Solution.hpp
year2023/day16/: Solution.cpp  Solution.hpp
year2023/day17/: Solution.cpp  Solution.hpp
year2023/day18/: Solution.cpp  Solution.hpp
year2023/day19/: Solution.cpp  Solution.hpp
year2023/day2/: Solution.cpp  Solution.hpp
year2023/day20/: Solution.cpp  Solution.hpp
year2023/day21/: Solution.cpp  Solution.hpp
year2023/day22/: Solution.cpp  Solution.hpp
year2023/day23/: Solution.cpp  Solution.hpp  input.txt
year2023/day24/: Solution.cpp  Solution.hpp
year2023/day25/: Solution.cpp  Solution.hpp  input.txt
year2023/day3/: Solution.cpp  Solution.hpp
year2023/day4/: Solution.cpp  Solution.hpp
year2023/day5/: Solution.cpp  Solution.hpp
year2023/day6/: Solution.cpp  Solution.hpp
year2023/day7/: Solution.cpp  Solution.hpp
year2023/day8/: Solution.cpp  Solution.hpp
year2023/day9/: Solution.cpp  Solution.hpp
